[metadata]
name = energy_diagram
version = 0.3.1
author = Caio Porto
description = file: README.md
long_description = text/markdown
url = https://github.com/cmporto/chem-energy-diagrams
python_requires = >=3.4
install_requires = 
    matplotlib
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Natural Language :: Portuguese (Brazilian)
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Chemistry
    
